added two classes for sm screen test

--- a/DiceGame/index.html
+++ b/DiceGame/index.html
@@ -12,7 +12,7 @@
     <div class="player0-panel">
         <div class="player0-name" id="name">Player 1</div>
         <div class="player0-score" id="score0"></div>
-        <div class="box-container">
+        <div class="box-container small1">
             <div class="label">Current Score:</div>
             <div class="score0" id="current-0"></div>
         </div>
@@ -20,7 +20,7 @@
     <div class="player1-panel">
         <div class="player1-name">Player 2</div>
         <div class="player1-score" id="score1"></div>
-        <div class="box-container" id="right">                
+        <div class="box-container small2" id="right">                
              <div class="label">Current Score:</div>
              <div class="score1" id="current-1"> </div>                    
         </div>
